# moveSemantics

./: .gitignore  CMakeLists.txt  README.md  sources.md
include/: move.hh
new_proj/: CMakeLists.txt
new_proj/include/: semantics.hh
new_proj/src/: for_loops.cc  semantics.cc  tutorial2.cc  tutorial3.cc
scripts/: for.sh  move2.sh  move3.sh  run.sh
src/: main.cc
